src/simplex/primal/snapshots/tsuno__simplex__primal__phase_one__tests__simplex_solve_records_phase_two_iteration_limit_trace.snap
---
source: src/simplex/primal/phase_one.rs
expression: trace
---
phase: phase one
iteration 0
basis before: [3]
outcome: optimal
basis after: [3]

phase: phase two
iteration 0
basis before: [0]
outcome: pivoted
entering column: 2 (reduced_cost: -8)
leaving column: 0 (step_length: 0)
direction: [3]
basis after: [2]
